@@ -7,10 +7,11 @@ noinst_LTLIBRARIES = libdc1394-juju.la
 pkgjujuinclude_HEADERS = 
 endif
 
-
 AM_CFLAGS = -I$(top_srcdir)/dc1394
 libdc1394_juju_la_SOURCES =  \
 	control.c \
 	capture.c \
-	juju.h
+	juju.h \
+	firewire-cdev.h \
+	firewire-constants.h
 
